2007-04-10 10:59:04  Denis Barbier <barbier@users.sourceforge.net>

	* autogen.sh: Fix bashism, patch by nyholku
	  https://sf.net/forum/message.php?msg_id=4249115
	* configure.ac: Replace AC_CONFIG_HEADERS by AM_CONFIG_HEADER.
	  Patch by nyholku https://sf.net/forum/message.php?msg_id=4249115

2007-03-30 07:42  Jerome Robert <jeromerobert@users.sourceforge.net>

	* src-java/test/Test4.java, src/BRepBuilderAPI.i, src/BRepTools.i,
	  src/gp.i: Add BRepTools_Quilt and gp_Circ, allow to create holed
	  faces and circles

2007-03-07 09:12:00  Jerome Robert <jeromerobert@users.sourceforge.net>

	* src/BRepPrimAPI.i: Add BRepPrimAPI_MakePrism

2006-11-20 11:19:00  Denis Barbier <barbier@users.sourceforge.net>

	* src-java/test/Test1.java: Compute vertex1 parameters on the
	  surface

2006-11-20 10:49:00  Jerome Robert <jeromerobert@users.sourceforge.net>

	* src-java/test/Test1.java, src/BRep.i, src/BRep_Tool.i,
	  src/Makefile.am, src/OccJava.i, src/TopoDS.i: Allow to set UV
	  coords of a vertex on a face. Move some class as I would like to
	  have one .i file by OCC package.

2006-10-23 15:00:47  tag V0_13_2

2006-10-23 15:00:47  Denis Barbier <barbier@users.sourceforge.net>

	* src/GeomLProp_SLProps.i:
	  Really fix GLProp_SLProp::normal

2006-04-07 14:03:35  tag V0_13_1
2006-04-07 14:03:35  tag V0_13

2006-04-07 14:03:35  Jerome Robert <jeromerobert@users.sourceforge.net>

	* src/GeomLProp_SLProps.i, src/gp.i:
	  Fix a bug in GLProp_SLProp::normal which gave an error message when meshing a cone
	* src/Standard.i: Catch Opencascade exceptions.

2006-04-06 12:40:14  Jerome Robert <jeromerobert@users.sourceforge.net>

	* src/Geom.i, src/GeomLProp_SLProps.i, src/gp.i:
	  Fix a bug Geom_Surface::Value.

2006-04-04 14:57:16  Jerome Robert <jeromerobert@users.sourceforge.net>

	* Makefile.am, autogen.sh, src/Makefile.am:
	  Fix "make clean"
	* src/BRepTools.i:
	  Port to Opencascade 6.1
	* src-java/test/Test3.java, src-java/test/Utilities.java: